--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "github-battle",
+  "name": "github-battle-es6-refactor",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -19,6 +19,7 @@
   "devDependencies": {
     "babel-core": "^6.7.4",
     "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "css-loader": "^0.23.1",
     "html-webpack-plugin": "^2.14.0",
